test/modules/errors/duplicateModules.compopts
duplicateModules2.chpl --main-module M
